products-ms/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-ms
spec:
  selector:
    app.kubernetes.io/name: products-ms
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
